#Service commit
Для реализации бизнес-логики в реактивном стеке:
- внесены изменения в код серваисов.